@@ -125,36 +125,6 @@ _pic14_parseOptions (int *pargc, char **argv, int *i)
     return FALSE;
 }
 
-/* pic14 port uses include/pic and lib/pic instead of
- * include/pic14 and lib/pic14 as indicated by SDCCmain.c's
- * setIncludePaths routine. */
-static void
-_pic14_initPaths (void)
-{
-  char *p;
-  char *p2=NULL;
-  set *tempSet=NULL;
-
-  if (options.nostdinc)
-      return;
-
-  tempSet = appendStrSet(dataDirsSet, NULL, INCLUDE_DIR_SUFFIX DIR_SEPARATOR_STRING "pic");
-  mergeSets(&includeDirsSet, tempSet);
-
-  if ((p = getenv(SDCC_INCLUDE_NAME)) != NULL)
-  {
-    addSetHead(&includeDirsSet, p);
-    p2=Safe_alloc(strlen(p)+strlen(DIR_SEPARATOR_STRING)+strlen("pic")+1);
-    if(p2!=NULL)
-    {
-        strcpy(p2, p);
-        strcat(p2, DIR_SEPARATOR_STRING);
-        strcat(p2, "pic");
-        addSetHead(&includeDirsSet, p2);
-    }
-  }
-}
-
 static void
 _pic14_finaliseOptions (void)
 {
@@ -406,7 +376,7 @@ PORT pic_port =
   _pic14_init,
   _pic14_parseOptions,
   _pic14_poptions,
-  _pic14_initPaths,
+  NULL,
   _pic14_finaliseOptions,
   _pic14_setDefaultOptions,
   pic14_assignRegisters,
